--- a/app/sledz-poczta-polska.html
+++ b/app/sledz-poczta-polska.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Śledzenie przesyłek Poczty Polskiej</title>
-    <meta charset="UTF-8">
-    <!--
+	<title>Śledzenie przesyłek Poczty Polskiej</title>
+	<meta charset="UTF-8">
+	<!--
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=4">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	-->
 	<meta name="viewport" content="width=410, initial-scale=1, maximum-scale=1">
-	
+
 	<meta name="author" content="Maciej Jaros">
 	<meta name="copyright" content="Poczta Polska">
-	
-	document.
+
+	<script>
+		var linkBazowy = "http://sledzeniepp.poczta-polska.pl/wiempost/home.pa?identyfikator=";
+		var identyfikator = "";
+		window.location.hash.replace(/identyfikator=([^&]+)/, function(a, value) {
+			identyfikator = value;
+		});
+	</script>
 </head>
-<body lang="pl"><iframe 
-	src="http://sledzeniepp.poczta-polska.pl/wiempost/home.pa?identyfikator=" 
-	width="100%" height="600" border="0" 
-	style="border:0px none black; padding:0; margin:0; min-width:410px"
-></body>
+<body lang="pl"><script>
+	document.write(''
+		+ '<iframe '
+		+ ' src="' + linkBazowy + identyfikator + '"'
+		+ ' width="100%" height="600" border="0" '
+		+ ' style="border:0px none black; padding:0; margin:0; min-width:410px"'
+		+ '>'
+	);
+</script></body>
 </html>
