--- a/app/index.html
+++ b/app/index.html
@@ -162,7 +162,7 @@
 			<p>Copyright &copy; 2013 Maciej &bdquo;Nux&rdquo; Jaros.</p>
 			<p>Aplikacja <em>PP tracker</em> umożliwia sczytanie identyfikatora przesyłki z kodu kreskowego i szybkie sprawdzenie gdzie jest przesyłka.</p>
 			<p>W aplikacji użyto wtyczki <a href="https://github.com/wildabeast/BarcodeScanner/blob/master/README.md" target="_blank">BarcodeScanner</a> (dostępna dla systemu Android i iOS).</p>
-			<p>Kod skryptu jest dotępny na GitHub.</p>
+			<p>Kod skryptu jest <a href="https://github.com/Eccenux/PP-tracker" target="_blank">dostępny na GitHub</a>.</p>
 			<a href="#" data-rel="back" data-role="button">Zamknij</a>
 		</div><!-- /content -->
 	</div><!-- /page -->
