--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@
 		$('#open-tracking-link')
 			.attr(
 				'href',
-				'sledz-poczta-polska.html#?identyfikator=' + barcode
+				'tracking-pp.html#page-tracking?identyfikator=' + barcode
 			)
 		;
 	}
