--- a/app/index.html
+++ b/app/index.html
@@ -207,6 +207,7 @@
 		<div data-role="content">
 			<div class="barcode_container">
 			</div>
+			<p>Zeskanuj kod innym urządzeniem.</p>
 			<a href="#" data-rel="back" data-role="button">Zamknij</a>
 		</div><!-- /content -->
 	</div><!-- /page -->
