--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,7 @@
 				'mailto:?subject='
 					+ encodeURIComponent('Poczta (kod)')
 					+'&body='
-					+ encodeURIComponent('Link do śledzenia przesyłki: http://sledzenie.poczta-polska.pl/?numer=' + barcode)
+					+ encodeURIComponent('Link do śledzenia przesyłki: http://emonitoring.poczta-polska.pl/?numer=' + barcode)
 			)
 		;
 		// QR
