--- a/app/tracking-pp.html
+++ b/app/tracking-pp.html
@@ -73,7 +73,7 @@
 			</div>
 			<script>
 			(function(){
-				var ppTrackingService = new TrackingService('http://sledzenie.poczta-polska.pl/');
+				var ppTrackingService = new TrackingService('http://emonitoring.poczta-polska.pl/');
 				//var ppTrackingService = new TrackingService('http://m.enux.pl.l/pp-tracker/cors.php?server=pp&url=');
 				
 				function trackingFail(info){
